# dependabot-demo

.github/: dependabot.yml
python/: pyproject.toml
